Refactor: Dto class repackage